orc8r/cloud/deploy/terraform/orc8r-helm-aws/helm.tf
################################################################################
# Copyright (c) Facebook, Inc. and its affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.
################################################################################

# helm tiller service account
resource "kubernetes_service_account" "tiller" {
  count = var.existing_tiller_service_account_name == null ? 1 : 0

  metadata {
    name      = "tiller"
    namespace = var.tiller_namespace
  }

  automount_service_account_token = true
}

# helm tiller cluster role
resource "kubernetes_cluster_role_binding" "tiller" {
  count = var.existing_tiller_service_account_name == null ? 1 : 0

  metadata {
    name = "tiller"
  }

  role_ref {
    kind      = "ClusterRole"
    name      = "cluster-admin"
    api_group = "rbac.authorization.k8s.io"
  }

  subject {
    kind      = "ServiceAccount"
    name      = "tiller"
    api_group = ""
    namespace = var.tiller_namespace
  }
}
